# lpybreakouot

./: .gitignore  CLAUDE.md  MARKDOWN_GUIDE.md  PYCHARM_SETUP.md  README.md  VSCODE_SETUP.md  github.md  pyproject.toml  test.md
breakout/: main.py
