[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "breakout"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "arcade",
]

[project.scripts]
breakout = "breakout.main:main"

[tool.setuptools.packages.find]
include = ["breakout*"]
